--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -29,7 +29,7 @@
                     <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. 
                 </p>
                 <p>
-                    <a class="icon" href="https://github.com/lebedev42">
+                    <a class="icon" href="https://github.com/lebedev42/ember-store">
                         <i class="fa fa-github"></i>
                     </a>
                 </p>
